replaced idea scale with uservoice updated how it works to about in nav

--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">About</a></li>
                 <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
                 <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
