--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
                 <li class="pure-menu-item active"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">How it works</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">About</a></li>
                 <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
                 <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
                 <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
@@ -114,7 +114,7 @@
         <div class="pure-u-1 text-block-1">
             <h4>Let your ideas flow.</h4>
             <p>Our raison D'être is promoting digital innovation across Global Affairs Canada. If you see an opportunity to address a departmental challenge through technology, start here. The InnoLAB will let you explore and prototype digitally innovative concepts.</p>
-            <a href="how-it-works.html" class="button-simple-link">How it works</a>
+            <a href="how-it-works.html" class="button-simple-link">About</a>
         </div>
 
         <div class="pure-u-1 pure-u-md-1-3">
@@ -129,11 +129,11 @@
 
         
         <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appIdeascale">
-                <div class="card-image img-ideascale"></div>
+            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appUservoice">
+                <div class="card-image img-uservoice"></div>
                 <div class="card-info">
-                    <div class="card-title">Ideascale</div>
-                    <div class="card-artist">Crowdsourcing</div>
+                    <div class="card-title">Uservoice</div>
+                    <div class="card-artist">Gather Feedback</div>
                 </div>
             </a>
         </div>
@@ -257,18 +257,18 @@
         </div>
     </div>
 
-    <!-- Modal App Marvel -->
-    <div class="modal fade" id="appIdeascale" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <!-- Modal App uservoice -->
+    <div class="modal fade" id="appUservoice" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
         <div class="modal-dialog modal-app-card" role="document">
             <div class="modal-content">
-                <div class="card-image img-ideascale-2"></div>
+                <div class="card-image img-uservoice-2"></div>
                 <div class="modal-body">
-                    <h3>Ideascale</h3>
+                    <h3>Uservoice</h3>
                     <h6>What is it and how can it help you?</h6>
-                    <p>Innovating together.</p>
-                    <p>IdeaScale is an innovation management platform that uses crowdsourcing to help you find and develop the next big thing. Let your network share feedback and ideas from anywhere. You’ll find answers to questions you never even thought to ask.</p>
+                    <p>Collect feedback from all the right sources.</p>
+                    <p>Give your customers, partners, or internal teams a voice with private labeled online feedback forums. Never miss a good idea - collect customer feedback right in your app (web or mobile) with a native user experience. Integrate feedback from every department talking to customers - support, sales, executives and even marketing.</p>
                     <p>Give it a try, let's put our ideas together!</p>
-                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="http://support.ideascale.com" target="_blank">app's support page</a>.</p>
+                    <p class="modal-app-card-support">Help available via the <a class="button-simple-link" href="https://feedback.uservoice.com/knowledgebase/" target="_blank">app's support page</a>.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
