--- a/get-started.html
+++ b/get-started.html
@@ -49,7 +49,7 @@
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
+                <li class="pure-menu-item"><a href="" class="pure-menu-link">FR</a></li>
             </ul>
         </div>
     </div>
@@ -81,8 +81,7 @@
         <div class="pure-u-1 text-block-3">
             <h4>Explore</h4>
             <p>Have a digital innovative idea? Start exploring our Toolkit.</p>
-            <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
-            <p>Give it a try, see how far you can elevate your ideas!</p>
+            <p>Access a series of tools to begin exploring digital innovation. There are tools for data analytics, crowdsourcing, mind mapping, with more to come. <i>Explore</i> Now to learn more.</p>
             <a href="toolkit.html" class="pure-button pure-button-blue" style="">Explore the toolkit</a>
         </div>
         <div class="pure-u-1 text-block-3">
@@ -91,7 +90,8 @@
         <div class="pure-u-1 text-block-3">
             <h4>Build</h4>
             <p>Want to prototype an innovative idea? Maybe we can help!</p>
-            <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.</p>
+            <p>Work with us to develop your innovative idea into a prototype. Request a meetingfor to learn about our submission criteria.
+            </p>
             <a href="build.html" class="pure-button pure-button-blue" style="">Request a meeting</a>
         </div>
         <div class="pure-u-1 text-block-3">
@@ -100,7 +100,7 @@
         <div class="pure-u-1 text-block-3">
             <h4>Launch</h4>
             <p>Think your prototype is department worthy? Let’s share it with others.</p>
-            <p>Let’s turn your prototype it into a product. Request a meeting to learn more about our process.</p>
+            <p>Turn your prototype it into a department-wide product. Request a meeting to learn more about our process.</p>
             <a href="share.html" class="pure-button pure-button-blue" style="">Request a meeting</a>
         </div>
     </div>
