--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="" class="pure-menu-link">FR</a></li>
                 <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
             </ul>
         </div>
@@ -113,7 +114,7 @@
 
         <div class="pure-u-1 text-block-1">
             <h4>Let your ideas flow.</h4>
-            <p>Our raison D'être is promoting digital innovation across Global Affairs Canada. If you see an opportunity to address a departmental challenge through technology, start here. The InnoLAB will let you explore and prototype digitally innovative concepts.</p>
+            <p>Our raison D'être is promoting digital innovation across Global Affairs Canada. If you see an opportunity to address a departmental challenge through technology, start here. The InnoLAB lets you you explore and prototype digitally innovative concepts.</p>
             <a href="how-it-works.html" class="button-simple-link">About</a>
         </div>
 
@@ -169,8 +170,7 @@
                 <div class="img-explore j1" style="height:240px"></div>
                 <div class="modal-body">
                     <h5>You can create freely.</h5>
-                    <p>Access a series of tools to begin exploring digital innovation. We have tools for data analytics, mind mapping, surveys and more to come. Click Explore Now to learn about our Toolkit</p>
-                    <p>Give it a try, see how far you can elevate your ideas!</p>
+                    <p>Access a series of tools to begin exploring digital innovation. There are tools for data analytics, crowdsourcing, mind mapping, with more to come. <i>Explore</i> Now to learn more.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
@@ -190,7 +190,7 @@
                 <div class="img-build j1" style="height:240px"></div>
                 <div class="modal-body">
                     <h5>Bringing your idea to the next level</h5>
-                    <p>We can work with you to develop your innovative idea into a prototype. Click Build Now for to learn about our submission criteria.
+                    <p>Work with us to develop your innovative idea into a prototype. Hit <i>Build now</i> below to learn about our submission criteria.
                     </p>
                 </div>
                 <div class="modal-footer">
@@ -211,7 +211,7 @@
                 <div class="img-publish j1" style="height:240px"></div>
                 <div class="modal-body">
                     <h5>Your Product.</h5>
-                    <p>Let’s turn your prototype it into a product. Click Launch Now, to learn more about our process.</p>
+                    <p>Turn your prototype it into a department-wide product. Hit <i>Launch now</i> to learn more about our process.</p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="pure-button" data-dismiss="modal">Cancel</button>
