--- a/visit.html
+++ b/visit.html
@@ -49,7 +49,7 @@
             </ul>
             <ul class="pure-menu-list align-right">
                 <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
+                <li class="pure-menu-item"><a href="" class="pure-menu-link">FR</a></li>
             </ul>
         </div>
     </div>
