updated content for 3 get started pages

--- a/build.html
+++ b/build.html
@@ -81,7 +81,7 @@
         <!-- section 1: Ready to protoype blurb-->
         <div class="pure-u-1 text-block-3">
             <h4>Ready to build a Prototype?</h4>
-            <p>The InnoLAB Team can work with you to develop an advanced prototype of your concept. We will design a prototype for you to evaluate with your intended audience. Assuming your prototype meets certain criteria, we will also publish it for all in Global Affairs Canada to access.</p>
+            <p>The InnoLAB Team can work with you to develop an advanced prototype of your concept. We will design a prototype for you to evaluate with your intended audience. Assuming your prototype meets certain criteria, we will <i>launch</i> it for all in Global Affairs Canada to access.</p>
         </div>
         <!-- section 2: Prototype criteria-->
         <div class="pure-u-1 text-block-3">
