--- a/share.html
+++ b/share.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>InnoLAB 2.0 Share</title>
+    <title>InnoLAB 2.0 Launch</title>
 
     <link rel="stylesheet" href="pure.css">
     <link rel="stylesheet" href="grids-responsive.css">
@@ -71,17 +71,21 @@
     <div class="j1 img-j5 j1-secondary">
         <div class="text-block-1">
             <h3 class="baby-blue">Innolab</h3>
-            <h1>Share</h1>
+            <h1>Launch</h1>
 
         </div>
     </div>
 
     <div class="pure-g section-3">
         <!-- section 1: Ready to protoype blurb-->
-        <div class="pure-u-1 text-block-1">
+        <div class="pure-u-1 text-block-3">
             <h4>Is your prototype successful?</h4>
             <p>We can rapidly develop your prototype into final production.</p>
-            <p>If your prototype shows to benefit your intended audience, we will work with you to make it a fully-fledged departmental offering! Otherwise, if your prototype didn’t succeed, No problem! We would like to write a failure report with you for lessons learned. If you have any questions, contact Us! Or view How it Works!
+            <p>If your prototype succeeded in your evaluation with your intended audience, we will make it a fully-fledged departmental offering!
+            </p>
+            <p>If your prototype didn’t succeed, No problem! Together, we will write a failure report on lessons learned.
+            </p>
+            <p>If you have any questions, <a class="baby-blue" href="contact.html">contact us</a> or read more <a class="baby-blue" href="how-it-works.html">about us</a>!
             </p>
         </div>
 
