--- a/toolkit.html
+++ b/toolkit.html
@@ -60,7 +60,7 @@
             </div>
             <div class="pure-u-1 pure-u-sm-1-3">
                 <ul class="list-inline">
-                    <li><a  class="active" href="toolkit.html">Explore</a></li>
+                    <li><a class="active" href="toolkit.html">Explore</a></li>
                     <li><a href="build.html">Build</a></li>
                     <li><a href="share.html">Share</a></li>
                 </ul>
@@ -78,12 +78,17 @@
 
     <!-- section 3: Toolkit-->
     <div class="pure-g section-3">
+        <div class="pure-u-1 text-block-3">
+            <h4>Ready to start?</h4>
+            <p>We have created a virtual sandbox for you to digitally innovate. See what we have below, more will be added in the future!</p>
+            <p>Please note, since the InnoLAB is also a proof-of-concept, we have a finite amount of licenses for some available tools. Similar to library, these licenses are provided to you on a timely basis of <i>1-3 weeks</i>. </p>
+            <p>You will also notice we have included some <u>free tools</u>! Before accessing these on your own, please review the user agreement for handling department data. </p>
+            <p>If you want to permanently use a tool, or have any questions, <a class="baby-blue" href="contact.html">contact us</a>! </p>
+
+        </div>
+
         <div class="pure-u-1 text-block-1">
-            <h4>Your toolkit.</h4>
-            <p>We have chosen a series of tools to give you the opportunity to digitally innovate. See what we have below, more apps will be added in the future.</p>
-            <p>Since the Innolab is also a proof-of-concept, we have a finite amount of licenses for our available tools. Similar to library, our licenses are provided on a timely basis of 1-3 weeks. If you want to permanently use a tool, or have any questions, contact Us!
-            </p>
-            <a href="contact.html" class="button-simple-link">Request a Tool</a>
+            <hr class="subtle">
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
