updated content of visit page

--- a/visit.html
+++ b/visit.html
@@ -65,11 +65,11 @@
     <div class="pure-g section-3">
         <!-- section 1: start a conversation-->
         <div class="pure-u-1 text-block-3">
-            <h4>Visit us</h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+            <h4>Get inspired</h4>
+            <p>We have a design space to help you brainstorm your digitally innovative ideas! Located at 200 Place du Portage, our space is designed for collaboration. Within the space you will find erasable walls, technology (of course!) and marvellous furniture to name a few. As a general rule, our design space can accommodate up to 10 people.</p>
 
             <h6 class="baby-blue">Want to book it?</h6>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. </p>
+            <p>If you are working on a digital innovation and would like to use the room, or would simply like to make a quick visit, hit <i>Book the Lab</i> and fill out the three (3) question form!</p>
         </div>
 
         <div class="pure-u-1 text-block-1">
