final fixes for layout and added google forms

--- a/contact.html
+++ b/contact.html
@@ -41,40 +41,32 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">About</a></li>
-                <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
-                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
-                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link link">Home</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link link">About</a></li>
+                <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link link">Get started</a></li>
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link link">Visit</a></li>
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item active"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
+                <li class="pure-menu-item"><a href="mailto:innolab@international.gc.ca" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="" class="pure-menu-link link">FR</a></li>
             </ul>
         </div>
     </div>
-
-    <!-- jumbotron -->
-    <!--<div class="j1 img-j1" data-stellar-background-ratio="0.8" style="background-image:url('./images/phone1.jpg')">
-        <div class="text-block-1">
-            <h1>Contact.</h1>
-            <p class="white"></p>
-        </div>
-    </div>-->
 
     <!-- section 1: 3 pillars-->
     <div class="pure-g">
 
-        <iframe src="https://docs.google.com/forms/d/1q3e2SsXQ5QMbMXZIMNSEPxR3JwnBP6JYNdhCeL00WI4/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+        <iframe src="https://docs.google.com/forms/d/1RJRnDmzzoNA3OPeG5bSjvslu1ZsaSgsutDLL5hv7_2U/viewform?embedded=true" width="100%" height="1500" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 
     </div>
 
     <!-- footer -->
-    <!--<div class="pure-g section-footer">
+    <div class="pure-g section-footer">
         <div class="pure-u-1 text-center">
             © 2016 Made with <span class="footer-strikethrough">love</span> a keyboard by <a class="baby-blue" href="http://loogart.com" target="_blank">Chris Soueidan</a> of Global Affairs Canada (SIAI).
         </div>
-    </div>-->
+    </div>
 
     <!-- Modal Explore -->
     <div class="modal fade" id="explore" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
