--- a/visit.html
+++ b/visit.html
@@ -41,15 +41,15 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">About</a></li>
-                <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
-                <li class="pure-menu-item active"><a href="visit.html" class="pure-menu-link">Visit</a></li>
-                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link link">Home</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link link">About</a></li>
+                <li class="pure-menu-item"><a href="get-started.html" class="pure-menu-link link">Get started</a></li>
+                <li class="pure-menu-item active"><a href="visit.html" class="pure-menu-link link">Visit</a></li>
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <li class="pure-menu-item"><a href="" class="pure-menu-link">FR</a></li>
+                <li class="pure-menu-item active"><a href="mailto:innolab@international.gc.ca" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="" class="pure-menu-link link">FR</a></li>
             </ul>
         </div>
     </div>
@@ -69,12 +69,16 @@
             <p>We have a design space to help you brainstorm your digitally innovative ideas! Located at 200 Place du Portage, our space is designed for collaboration. Within the space you will find erasable walls, technology (of course!) and marvellous furniture to name a few. As a general rule, our design space can accommodate up to 10 people.</p>
 
             <h6 class="baby-blue">Want to book it?</h6>
-            <p>If you are working on a digital innovation and would like to use the room, or would simply like to make a quick visit, hit <i>Book the Lab</i> and fill out the three (3) question form!</p>
+            <p>If you are working on a digital innovation and would like to use the room, or would simply like to make a quick visit, <i>Book the Lab</i> by filling out the simple form below!</p>
         </div>
 
-        <div class="pure-u-1 text-block-1">
+        <!--<div class="pure-u-1 text-block-1">
             <a href="contact.html" class="pure-button pure-button-blue" style="">Book the Lab</a>
+        </div>-->
+        <div class="pure-u-1 text-block-1" style="padding-top:0;">
+            <iframe src="https://docs.google.com/forms/d/1qxQ3P4Ijh06WFPb_qhrvEoT9CSaTtVFYrHSys6p6gdk/viewform?embedded=true" width="100%" height="1370" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
         </div>
+
     </div>
 
     <!-- footer -->
