--- a/build.html
+++ b/build.html
@@ -41,19 +41,19 @@
         <div class="pure-menu pure-menu-horizontal pure-menu-scrollable custom-menu custom-menu-bottom custom-menu-tucked" id="tuckedMenu">
             <div class="custom-menu-screen"></div>
             <ul class="pure-menu-list">
-                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link">Home</a></li>
-                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link">About</a></li>
-                <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link">Get started</a></li>
-                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link">Visit</a></li>
-                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link">Discuss</a></li>
+                <li class="pure-menu-item"><a href="index.html" class="pure-menu-link link">Home</a></li>
+                <li class="pure-menu-item"><a href="how-it-works.html" class="pure-menu-link link">About</a></li>
+                <li class="pure-menu-item active"><a href="get-started.html" class="pure-menu-link link">Get started</a></li>
+                <li class="pure-menu-item"><a href="visit.html" class="pure-menu-link link">Visit</a></li>
+                <li class="pure-menu-item"><a href="discuss.html" class="pure-menu-link link">Discuss</a></li>
             </ul>
             <ul class="pure-menu-list align-right">
-                <li class="pure-menu-item"><a href="contact.html" class="pure-menu-link">Contact</a></li>
-                <!--<li class="pure-menu-item"><a href="#" class="pure-menu-link toggle-drawer">Log in <span class="icon-play"></span></a></li>-->
+                <li class="pure-menu-item active"><a href="mailto:innolab@international.gc.ca" class="pure-menu-link">Contact</a></li>
+                <li class="pure-menu-item"><a href="" class="pure-menu-link link">FR</a></li>
             </ul>
         </div>
     </div>
-    
+
     <div class="nav-secondary">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
