--- a/build.html
+++ b/build.html
@@ -54,16 +54,16 @@
         </div>
     </div>
 
-    <div class="nav-secondary">
+    <div class="nav-secondary" id="anchor-nav-secondary">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
                 <p><a href="get-started.html"><b>GET STARTED</b></a></p>
             </div>
             <div class="pure-u-1 pure-u-sm-1-3">
                 <ul class="list-inline">
-                    <li><a href="toolkit.html">Explore</a></li>
-                    <li><a class="active" href="build.html">Build</a></li>
-                    <li><a href="share.html">Launch</a></li>
+                    <li><a href="toolkit.html#anchor-nav-secondary">Explore</a></li>
+                    <li><a class="active" href="build.html#anchor-nav-secondary">Build</a></li>
+                    <li><a href="share.html#anchor-nav-secondary">Launch</a></li>
                 </ul>
             </div>
         </div>
