--- a/get-started.html
+++ b/get-started.html
@@ -13,7 +13,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css" class="fontstack-asset">
     <style>
-
     </style>
 </head>
 
@@ -53,16 +52,16 @@
             </ul>
         </div>
     </div>
-    <div class="nav-secondary">
+    <div class="nav-secondary" id="anchor-nav-secondary">
         <div class="pure-g">
             <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
                 <p><a href="get-started.html"><b>GET STARTED</b></a></p>
             </div>
             <div class="pure-u-1 pure-u-sm-1-3">
                 <ul class="list-inline">
-                    <li class="active"><a href="toolkit.html">Explore</a></li>
-                    <li><a href="build.html">Build</a></li>
-                    <li><a href="share.html">Launch</a></li>
+                    <li class="active"><a href="toolkit.html#anchor-nav-secondary">Explore</a></li>
+                    <li><a href="build.html#anchor-nav-secondary">Build</a></li>
+                    <li><a href="share.html#anchor-nav-secondary">Launch</a></li>
                 </ul>
             </div>
         </div>
