--- a/build.html
+++ b/build.html
@@ -56,10 +56,10 @@
 
     <div class="nav-secondary" id="anchor-nav-secondary">
         <div class="pure-g">
-            <div class="pure-u-1 pure-u-sm-2-3 hidden-xs">
+            <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-2-3 hidden-xs">
                 <p><a href="get-started.html"><b>GET STARTED</b></a></p>
             </div>
-            <div class="pure-u-1 pure-u-sm-1-3">
+            <div class="pure-u-1 pure-u-md-1-2 pure-u-lg-1-3">
                 <ul class="list-inline">
                     <li><a href="toolkit.html#anchor-nav-secondary">Explore</a></li>
                     <li><a class="active" href="build.html#anchor-nav-secondary">Build</a></li>
