updated minor elements

--- a/infosession.html
+++ b/infosession.html
@@ -22,12 +22,12 @@
 
     <!--drawer backdrop -->
     <div class="toggle drawer-closed" id="toggler">
-                   <img class="pure-img" src="images/conference.jpg">
+        <img class="pure-img" src="images/conference.jpg">
 
         <div class="drawer-header text-left">
             <h5 class="baby-blue" style="font-weight:400">Data Training Program</h5>
             <p>To register to the Data Training Program, please fill in the application form for the Data Training Program.</p>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_cTqKkHHlIq6KEiNwFHmb7pzGxOehT1RCqqEtBrwlK25-Bg/viewform" target="_blank" class="pure-button">Register to the Data Training Program</a> 
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe_cTqKkHHlIq6KEiNwFHmb7pzGxOehT1RCqqEtBrwlK25-Bg/viewform" target="_blank" class="pure-button">Apply today</a>
         </div>
     </div>
 
@@ -59,9 +59,11 @@
     <!-- jumbotron -->
     <div class="j1 img-data1">
         <div class="text-block-2">
-            <h6 class="text-dark" style="font-weight:500">Data_Analytics@GAC Info Session </h6>
+            <div class="jumbotron-light-text">
+            <h6 style="font-weight:500">Data_Analytics@GAC Info Session </h6>
             <h3>Wednesday September 21, 2016</h3>
             <p>Interested in learning about data analytics? Please join us as the Information Technology Bureau and the newly formed Results and Delivery Unitare hosting a one day <i>Data_Analytics@GAC</i> info session. </p>
+            </div>
             <hr style="border:1px solid transparent">
             <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSc2zWyH2juoDW2ZN6MAiEh0i2ngqjB-M3vhBK3o5PxbacVbhw/viewform" class="pure-button pure-button-blue" target="_blank">Register now</a></p>
         </div>
@@ -70,14 +72,14 @@
 
     <!-- section 1-->
     <div class="pure-g section-2">
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <h4>A Government Priority</h4>
                 <p>Raise your awareness around data analytics and its role in helping meet Government of Canada priorities. As part of the agenda, you will be introduced to some basics of data analytics, as well as learn about use cases from across the department. Finally, you will participate in an activity to pre-select projects for a formal Data Analyst Training curriculum currently being designed.</p>
                 <a href="#!" class="button-simple-link" data-toggle="modal" data-target="#comingSoon">&rarr; Learn more about Data Analytics</a>
             </div>
         </div>
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <img src="images/canada.jpg" class="pure-img">
             </div>
@@ -86,12 +88,12 @@
 
     <!-- section 2-->
     <div class="pure-g section-2">
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <img src="images/conference.jpg" class="pure-img">
             </div>
         </div>
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <h4>Goals</h4>
                 <ol>
@@ -110,7 +112,7 @@
 
     <!-- section 3-->
     <div class="pure-g section-2">
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <h4>Event Details</h4>
                 <ol>
@@ -124,7 +126,7 @@
                 <a href="#!" class="button-simple-link" data-toggle="modal" data-target="#agenda">&rarr; View the Agenda</a>
             </div>
         </div>
-        <div class="pure-u-1-2">
+        <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
                 <img src="images/clock.jpg" class="pure-img">
             </div>
@@ -152,7 +154,7 @@
 
     <!-- Modal Agenda -->
     <div class="modal fade" id="agenda" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-        <div class="modal-dialog" role="document">
+        <div class="modal-dialog" role="document" style="width:80%">
             <div class="modal-content">
                 <div class="modal-body">
                     <h4>Agenda of the Info Session</h4>
