added new image for canada flag

--- a/infosession.html
+++ b/infosession.html
@@ -81,7 +81,7 @@
         </div>
         <div class="pure-u-sm-1 pure-u-md-1-2">
             <div class="text-block-2">
-                <img src="images/canada.jpg" class="pure-img">
+                <img src="images/canada2.jpg" class="pure-img">
             </div>
         </div>
     </div>
