--- a/toolkit.html
+++ b/toolkit.html
@@ -14,6 +14,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,300,700" rel="stylesheet" type="text/css" class="fontstack-asset">
     <style>
 
+
     </style>
 </head>
 
@@ -81,32 +82,25 @@
         <div class="pure-u-1 text-block-3">
             <h4>Ready to start?</h4>
             <p>We have created a virtual sandbox for you to digitally innovate. See what we have below, more will be added in the future!</p>
-            <p>Please note, since the InnoLAB is also a proof-of-concept, we have a finite amount of licenses for some available tools. Similar to library, these licenses are provided to you on a timely basis of <i>1-3 weeks</i>. </p>
-            <p>You will also notice we have included some <u>free tools</u>! Before accessing these on your own, please review the user agreement for handling department data. </p>
-            <p>If you want to permanently use a tool, or have any questions, <a class="baby-blue" href="contact.html">contact us</a>! </p>
 
         </div>
 
-        <div class="pure-u-1 text-block-1">
-            <hr class="subtle">
+
+        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
+            <a class="card" href="https://loogart.github.io/gcpedicure/" target="_blank">
+                <div class="card-image" style="background-image:url('https://github.com/loogart/gcpedicure/blob/master/img/feet.jpg?raw=true)"></div>
+                <div class="card-info">
+                    <div class="card-title">GCpedicure</div>
+                    <div class="card-artist">CGpedia css skin</div>
+                </div>
+            </a>
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appWatson">
                 <div class="card-image img-watson"></div>
-                <div class="free-app">FREE</div>
                 <div class="card-info">
                     <div class="card-title">Watson</div>
-                    <div class="card-artist">Big Data Analytics</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appTableau">
-                <div class="card-image img-tableau"></div>
-                <div class="card-info">
-                    <div class="card-title">Tableau</div>
                     <div class="card-artist">Big Data Analytics</div>
                 </div>
             </a>
@@ -143,19 +137,8 @@
         </div>
 
         <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
-            <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appFluid">
-                <div class="card-image img-fluid"></div>
-                <div class="card-info">
-                    <div class="card-title">Fluid Surveys</div>
-                    <div class="card-artist">Survey Tool</div>
-                </div>
-            </a>
-        </div>
-
-        <div class="pure-u-1 pure-u-sm-1-2 pure-u-md-1-3">
             <a class="card" href="" target="_blank" data-toggle="modal" data-target="#appCoggle">
                 <div class="card-image img-coggle-2"></div>
-                <div class="free-app">FREE</div>
                 <div class="card-info">
                     <div class="card-title">Coggle</div>
                     <div class="card-artist">Mind Mapping Tool</div>
@@ -168,6 +151,13 @@
                 <h2>+</h2>
                 <h6>Suggest a tool</h6>
             </a>
+        </div>
+
+        <div class="pure-u-1 text-block-3">
+            <p>Please note, since the InnoLAB is also a proof-of-concept, we have a finite amount of licenses for some available tools. Similar to library, these licenses are provided to you on a timely basis of <i>1-3 weeks</i>. </p>
+            <p>You will also notice we have included some <u>free tools</u>! Before accessing these on your own, please review the user agreement for handling department data. </p>
+            <p>If you want to permanently use a tool, or have any questions, <a class="baby-blue" href="contact.html">contact us</a>! </p>
+
         </div>
 
 
@@ -370,12 +360,13 @@
     <script src="stellar.js"></script>
     <script>
         // menu horizontal
-        (function (window, document) {
-            document.getElementById('toggle').addEventListener('click', function (e) {
+        (function(window, document) {
+            document.getElementById('toggle').addEventListener('click', function(e) {
                 document.getElementById('tuckedMenu').classList.toggle('custom-menu-tucked');
                 document.getElementById('toggle').classList.toggle('x');
             });
         })(this, this.document);
+
     </script>
 </body>
 
